src/app/components/guide/shared.module.css
.guideBoxApp {
  display: flex;
  align-items: center;
  width: fit-content;
  height: fit-content;
  background-color: #ffffca;
  border: black 1px solid;
  border-radius: 5px;
  z-index: 100;
  position: absolute;
  left: 120px;
  top: 25px;
}
.guideBoxStart {
  display: flex;
  align-items: center;
  width: fit-content;
  height: fit-content;
  background-color: #ffffca;
  border: black 1px solid;
  border-radius: 5px;
  z-index: 100;
  position: absolute;
  bottom: 50px;
  left: 100px;
}
.guideBoxWelcome {
  display: flex;
  align-items: center;
  width: fit-content;
  height: fit-content;
  background-color: #ffffca;
  border: black 1px solid;
  border-radius: 5px;
  z-index: 100;
  position: absolute;
  top: 45%;
  left: 50%;
  margin-right: -50%;
  transform: translate(-50%, -50%);
}

.guideLabelApp {
  margin: 20px;
}
.guideLabelStart {
  margin: 50px;
  font-size: larger;
}
.guideLabelWelcome {
  margin: 40px;
  font-size: large;
}

.triangleLeft {
  position: absolute;
  left: 101px;
  top: 30px;
  width: 20px;
  height: auto;
  z-index: 101;
  filter: drop-shadow(0px 1px 0 black) drop-shadow(-1px -1px 0 black);
}
.triangleDown {
  position: absolute;
  bottom: 1px;
  left: 115px;
  height: 50px;
  width: auto;
  z-index: 101;
  filter: drop-shadow(2px 2px 0 black);
  border-left: black solid 2px;
  box-sizing: border-box;
}

.welcomeGuideContainer {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
}
.guideMiddle {
  display: flex;
  align-items: center;
  flex-direction: column;
  width: 100%;
  height: 100%;
  background-image: url("/guide/guideBackground.png");
  background-size: 100% 100%;
}
.guideOuter {
  width: 100%;
  height: 10%;
  background-color: #03319c;
}
.welcomeHeader {
  color: white;
  font-style: italic;
  font-size: 30px;
}
.welcomeSubHeader {
  color: #d2e0f4;
  font-size: 25px;
}

.arrowLabelContainer {
  display: flex;
  align-items: center;
  height: 50px;
  width: 100%;
}
.arrowLabelContainer:hover {
  border-radius: 10px;
  box-shadow: rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
}
.arrowButton {
  height: 30px;
  margin: 5px;
}
.arrowLabel {
  color: white;
  font-size: 20px;
  margin: 10px;
}

